# va-tool

./: .editorconfig  Cargo.toml  README.md  build.sh  config.example.yml  run.sh
dockerfiles/: docker-compose.yml
dockerfiles/build-rs/: Dockerfile
src/: compression_standard.rs  config.rs  error.rs  filter.rs  input.rs  logger.rs  main.rs  mediacontainer.rs  opt.rs  pipeline.rs  source.rs
