[package]
name = "va-tool"
version = "0.0.1"
edition = "2018"
authors = ["Ivan Egorov <vany.egorov@gmail.com>"]
license = "MIT"
repository = "https://github.com/video-audio/va-tool"
homepage = "https://github.com/video-audio/va-tool"
documentation = "https://docs.rs/va-tool/0.0.1/va-tool"
description = ""
keywords = [
    "video", "audio"
]
categories = ["video-audio"]
exclude = [
    "dockerfiles/*",
    "run.sh"
]

[dependencies]
bitflags = "~1.1"
chrono = "~0.4"
clap = "~2.33"
failure = "~0.1.5"
fern = { version = "~0.5.8", features = ["colored"] }
lazy_static = "~1.4"
log = "~0.4"
regex = "1"
va-ts = "~0.0.3"
