[package]
name = "va-tool"
version = "0.0.1"
edition = "2018"
authors = ["Ivan Egorov <vany.egorov@gmail.com>"]
license = "MIT"
repository = "https://github.com/video-audio/va-tool"
homepage = "https://github.com/video-audio/va-tool"
documentation = "https://docs.rs/va-tool/0.0.1/va-tool"
description = ""
keywords = [
    "video", "audio"
]
categories = ["video-audio"]
exclude = [
    "dockerfiles/*",
    "run.sh"
]

[dependencies]
bitflags = "1.2.1"
ctrlc = "3.1"
crossbeam-channel = "0.4"
failure = "0.1.5"
lazy_static = "1.4.0"
log = { version = "0.4.11", features = ["std"] }
regex = "1.3.1"
ts = { package = "va-ts", version = "~0.0.3"}
url = "2.1.0"
